// Copyright 2019 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package NetDataService;

// The greeting service definition.
service NetDataPacketSender {
  // Sends a greeting 
  rpc SendPacket (NetDataPacket) returns (Status);
}

// The request message containing the user's name.
message NetDataPacket {
  string name = 1;
  int32 Port = 2;
  string ServerName = 3;
  float RefreshSpeed = 4;
  uint64 Epoch = 5;
  float AverageTps = 6;
  float AverageDeltaTime = 7;
  uint64 MemoryUsage = 8;
  float CpuUsage = 9;
  int32 Players = 10;
  int32 LowTpsWarnCount = 11;
}

message Status {
  string Result = 1;
  int32 Response = 2;
}